# Observatoire_racism

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: application_map.md  assemblee_contextualization_contract_v2.md  assemblee_contextualization_contracts.md  assemblee_contextualization_plan.md  assemblee_contextualization_tasks.md  assemblee_roadmap.md  assemblee_signaux_plan.md  assemblee_signaux_tasks.md  audit_architecture.md  checklist.md  examen_modules_contextualization.md  plan.md
src/: build_assemblee_phase_c_lot.py  build_assemblee_pilot.py
src/assemblee_contextualization/: __init__.py  context_builder.py  contracts.py  env.py  heatmap_export.py  io_v2.py  mistral_provider.py  mistral_provider_v2.py  mock_provider.py  mock_provider_v2.py  paths.py  processing_journal.py  providers.py  review_engine.py  reviewer.py  run_incremental_session_v2.py  run_phase_c_lot_v2.py  run_pilot.py  run_pilot_v2.py  signal_rules.py  source_acquisition.py  source_inventory.py  source_manifest.py  xml_parser.py
tests/assemblee/: test_build_assemblee_phase_c_lot.py  test_build_assemblee_pilot.py
tests/assemblee_contextualization/: test_context_builder.py  test_contracts.py  test_contracts_v2.py  test_env.py  test_heatmap_export.py  test_io_v2.py  test_mistral_provider.py  test_mistral_provider_v2.py  test_mock_provider.py  test_mock_provider_v2.py  test_paths.py  test_processing_journal.py  test_review_engine.py  test_reviewer_decisions.py  test_run_incremental_session_v2.py  test_run_phase_c_lot_v2.py  test_run_pilot_v2.py  (+5 more)
(+537 files in other folders)
